--- a/appview/pages/templates/layouts/topbar.html
+++ b/appview/pages/templates/layouts/topbar.html
@@ -33,7 +33,12 @@
         <a href="/{{ didOrHandle .Did .Handle }}">profile</a>
         <a href="/knots">knots</a>
         <a href="/settings">settings</a>
-        <a href="/logout" class="text-red-400 hover:text-red-700 dark:text-red-400 dark:hover:text-red-300">logout</a>
+        <a href="#" 
+           hx-post="/logout" 
+           hx-swap="none" 
+           class="text-red-400 hover:text-red-700 dark:text-red-400 dark:hover:text-red-300">
+          logout
+        </a>
     </div>
 </details>
 {{ end }}
