slightly nicer login-page styles
make the form wider, and move it up a bit

--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -12,7 +12,7 @@
             <title>login</title>
         </head>
         <body class="flex items-center justify-center min-h-screen">
-            <main class="max-w-64">
+            <main class="max-w-7xl px-6 -mt-4">
                 <h1 class="text-center text-2xl font-semibold italic dark:text-white">
                     tangled
                 </h1>
