--- a/appview/pages/templates/repo/blob.html
+++ b/appview/pages/templates/repo/blob.html
@@ -52,18 +52,7 @@
         </p>
     {{ else }}
     <div class="overflow-auto relative">
-        {{ range $idx, $line := $lines }}
-            {{ $linenr := add $idx 1 }}
-            <div class="flex">
-              <a href="#L{{ $linenr }}" id="L{{ $linenr }}" class="no-underline peer">
-                  <span class="{{ $code_number_style }}"
-                      style="min-width: {{ $tot_chars }}ch;">
-                      {{ $linenr }}
-                  </span>
-              </a>
-              <div class="whitespace-pre peer-target:bg-yellow-200 dark:peer-target:bg-yellow-900">{{ $line | escapeHtml }}</div>
-            </div>
-        {{ end }}
+        <div class="whitespace-pre peer-target:bg-yellow-200 dark:peer-target:bg-yellow-900">{{ $.Contents | escapeHtml }}</div>
     </div>
     {{ end }}
 {{ end }}
