--- a/appview/pages/templates/knot.html
+++ b/appview/pages/templates/knot.html
@@ -17,7 +17,9 @@
   <dl class="grid grid-cols-[auto_1fr] gap-x-4 dark:text-gray-200">
     <dt class="font-bold">opened by</dt>
     <dd>
-      @{{ .Registration.ByDid }}
+      <span>
+        {{ index $.DidHandleMap .Registration.ByDid }} <span class="text-gray-500 dark:text-gray-400 font-mono">{{ .Registration.ByDid }}</span>
+      </span>
       {{ if eq $.LoggedInUser.Did $.Registration.ByDid }}
         <span class="text-xs bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 px-2 py-1 rounded ml-2">you</span>
       {{ end }}
@@ -57,8 +59,10 @@
     <div id="member-list" class="flex flex-col gap-4">
       {{ range $.Members }}
         <div class="inline-flex items-center gap-4">
-          {{ i "user" "w-3 h-3 dark:text-gray-300" }}
-          <a href="/{{.}}" class="text-gray-900 dark:text-white">{{.}}</a>
+          {{ i "user" "w-4 h-4 dark:text-gray-300" }}
+          <a href="/{{index $.DidHandleMap .}}" class="text-gray-900 dark:text-white">{{index $.DidHandleMap .}} 
+            <span class="text-gray-500 dark:text-gray-400 font-mono">{{.}}</span>
+          </a>
         </div>
       {{ else }}
         <p class="text-gray-500 dark:text-gray-400">No members have been added yet.</p>
