--- a/appview/pages/templates/knots.html
+++ b/appview/pages/templates/knots.html
@@ -36,7 +36,9 @@
             <div class="flex flex-col gap-1">
               <div class="inline-flex items-center gap-4">
                 {{ i "git-branch" "w-3 h-3 dark:text-gray-300" }}
-                <p class="font-bold dark:text-white">{{ .Domain }}</p>
+                <a href="/knots/{{ .Domain }}">
+                  <p class="font-bold dark:text-white">{{ .Domain }}</p>
+                </a>
               </div>
               <p class="text-sm text-gray-500 dark:text-gray-400">owned by {{ .ByDid }}</p>
               <p class="text-sm text-gray-500 dark:text-gray-400">registered {{ .Registered | timeFmt }}</p>
