--- a/appview/pages/templates/fragments/issueComment.html
+++ b/appview/pages/templates/fragments/issueComment.html
@@ -9,7 +9,7 @@
       {{ $isIssueAuthor := eq .OwnerDid $.Issue.OwnerDid }}
       {{ if $isIssueAuthor }}
       <span class="before:content-['·']"></span>
-      <span class="rounded bg-gray-100 text-black font-mono px-2 mx-1/2 inline-flex items-center">
+      <span class="rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center">
         author
       </span>
       {{ end }}
@@ -19,7 +19,13 @@
           href="#{{ .CommentId }}"
           class="text-gray-500 hover:text-gray-500 hover:underline no-underline"
           id="{{ .CommentId }}">
-        {{ .Created | timeFmt }}
+        {{ if .Deleted }}
+          deleted {{ .Deleted | timeFmt }}
+        {{ else if .Edited }}
+          edited {{ .Edited | timeFmt }}
+        {{ else }}
+          {{ .Created | timeFmt }}
+        {{ end }}
       </a>
 
       {{ $isCommentOwner := eq $.LoggedInUser.Did .OwnerDid }}
@@ -32,18 +38,19 @@
         >
         {{ i "pencil" "w-4 h-4" }}
       </button>
-      <button class="btn px-2 py-1 text-sm text-red-500" hx-delete="">
+      <button 
+        class="btn px-2 py-1 text-sm text-red-500"
+        hx-delete="/{{ $.RepoInfo.FullName }}/issues/{{ .Issue }}/comment/{{ .CommentId }}/"
+        hx-swap="outerHTML"
+        hx-target="#comment-container-{{.CommentId}}"
+        >
         {{ i "trash-2" "w-4 h-4" }}
       </button>
       {{ end }}
 
-      {{ if .Deleted }}
-      <span class="before:content-['·']">deleted {{ .Deleted | timeFmt }}</span>
-      {{ end }}
-
     </div>
     {{ if not .Deleted }}
-    <div class="prose">
+    <div class="prose dark:prose-invert">
       {{ .Body | markdown }}
     </div>
     {{ end }}
