add confirm for comment deletion

--- a/appview/pages/templates/repo/issues/issue.html
+++ b/appview/pages/templates/repo/issues/issue.html
@@ -107,7 +107,7 @@
       </form>
     </div>
   {{ else }}
-    <div class="bg-white rounded drop-shadow-sm px-6 py-4 mt-8">
+    <div class="bg-white dark:bg-gray-800 dark:text-gray-400 rounded drop-shadow-sm px-6 py-4 mt-8">
       <div class="absolute left-8 -top-8 w-px h-8 bg-gray-300 dark:bg-gray-700" ></div>
       <a href="/login" class="underline">login</a> to join the discussion
     </div>
