--- a/appview/pages/templates/fragments/issueComment.html
+++ b/appview/pages/templates/fragments/issueComment.html
@@ -28,7 +28,7 @@
         {{ end }}
       </a>
 
-      {{ $isCommentOwner := eq $.LoggedInUser.Did .OwnerDid }}
+      {{ $isCommentOwner := and $.LoggedInUser (eq $.LoggedInUser.Did .OwnerDid) }}
       {{ if and $isCommentOwner (not .Deleted) }}
       <button 
         class="btn px-2 py-1 text-sm" 
@@ -41,6 +41,7 @@
       <button 
         class="btn px-2 py-1 text-sm text-red-500"
         hx-delete="/{{ $.RepoInfo.FullName }}/issues/{{ .Issue }}/comment/{{ .CommentId }}/"
+        hx-confirm="Are you sure you want to delete your comment?"
         hx-swap="outerHTML"
         hx-target="#comment-container-{{.CommentId}}"
         >
