--- a/appview/pages/templates/user/profile.html
+++ b/appview/pages/templates/user/profile.html
@@ -17,17 +17,16 @@
 {{ end }}
 
 
-
 {{ define "profileTimeline" }}
     <div class="flex flex-col gap-3 relative">
         <p class="px-6 text-sm font-bold py-2 dark:text-white">ACTIVITY</p>
         {{ range .ProfileTimeline }}
           {{ if eq .Type "issue" }}
           <div class="px-6 py-2 bg-white dark:bg-gray-800 rounded drop-shadow-sm w-fit max-w-full flex items-center gap-2">
-              {{ $textColor := "text-gray-800 dark:text-gray-700" }}
+              {{ $textColor := "text-gray-800 dark:text-gray-400" }}
               {{ $icon := "ban" }}
               {{ if .Issue.Open }}
-                  {{ $textColor = "text-green-600 dark:text-green-700" }}
+                  {{ $textColor = "text-green-600 dark:text-green-500" }}
                   {{ $icon = "circle-dot" }}
               {{ end }}
             <div class="p-1 {{ $textColor }}">
@@ -44,13 +43,13 @@
           </div>
           {{ else if eq .Type "pull" }}
           <div class="px-6 py-2 bg-white dark:bg-gray-800 rounded drop-shadow-sm w-fit flex items-center gap-3">
-            {{ $textColor := "text-gray-800 dark:text-gray-700" }}
+            {{ $textColor := "text-gray-800 dark:text-gray-400" }}
             {{ $icon := "git-pull-request-closed" }}
             {{ if .Pull.State.IsOpen }}
-                {{ $textColor = "text-green-600 dark:text-green-700" }}
+                {{ $textColor = "text-green-600 dark:text-green-500" }}
                 {{ $icon = "git-pull-request" }}
             {{ else if .Pull.State.IsMerged }}
-                {{ $textColor = "text-purple-600 dark:text-purple-700" }}
+                {{ $textColor = "text-purple-600 dark:text-purple-500" }}
                 {{ $icon = "git-merge" }}
             {{ end }}
             <div class="{{ $textColor }} p-1">
@@ -68,7 +67,7 @@
           </div>
           {{ else if eq .Type "repo" }}
           <div class="px-6 py-2 bg-white dark:bg-gray-800 rounded drop-shadow-sm w-fit flex items-center gap-3">
-            <div class="text-black dark:text-white p-1">
+            <div class="text-gray-800 dark:text-gray-400 p-1">
               {{ i "book-plus" "w-5 h-5" }}
             </div>
             <div>
@@ -79,6 +78,8 @@
             </div>
           </div>
           {{ end }}
+        {{ else }}
+            <p class="px-6 dark:text-white">This user does not have any activity yet.</p>
         {{ end }}
       </div>
 {{ end }}
