--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -73,11 +73,18 @@
                     </span>
 
                     <span class="before:content-['·']">
-                        targeting branch
+                        targeting
                         <span class="text-xs rounded bg-gray-100 dark:bg-gray-600 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center">
                           {{ .TargetBranch }}
                         </span>
                     </span>
+                    {{ if .IsSameRepoBranch }}
+                    <span>from
+                      <span class="text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center">
+                        {{ .PullSource.Branch }}
+                      </span>
+                    </span>
+                    {{ end }}
                 </p>
             </div>
         {{ end }}
