--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -39,11 +39,18 @@
                 <span class="select-none before:content-['\00B7']"></span>
                 <time>{{ .Pull.Created | timeFmt }}</time>
                 <span class="select-none before:content-['\00B7']"></span>
-                <span>targeting branch 
+                <span>targeting
                   <span class="text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center">
                     {{ .Pull.TargetBranch }}
                   </span>
                 </span>
+                {{ if .Pull.IsSameRepoBranch }}
+                <span>from
+                  <span class="text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center">
+                    {{ .Pull.PullSource.Branch }}
+                  </span>
+                </span>
+                {{ end }}
             </span>
         </div>
 
