--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -73,7 +73,7 @@
                     </span>
 
                     <span class="before:content-['·']">
-                        targeting
+                        patch targeting
                         <span class="text-xs rounded bg-gray-100 dark:bg-gray-600 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center">
                           {{ .TargetBranch }}
                         </span>
