--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -14,7 +14,7 @@
             {{ block "extrameta" . }}{{ end }}
         </head>
         <body class="bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200">
-          <div class="container mx-auto px-1 pt-4 min-h-screen flex flex-col">
+          <div class="container mx-auto px-1 md:pt-4 min-h-screen flex flex-col">
             <header style="z-index: 5">
               {{ block "topbar" . }}
               {{ template "layouts/topbar" . }}
